WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
53037
layoutTestController.counterValueForElementById does not return the correct value
https://bugs.webkit.org/show_bug.cgi?id=53037
Summary
layoutTestController.counterValueForElementById does not return the correct v...
Carol Szabo
Reported
2011-01-24 12:39:32 PST
When the :before and/or :after pseudo-elements of an element are enclosed in an anonymous renderer, inside their parent renderer, they are not found by the layoutTestController.counterValueForElementById function.
Attachments
Proposed Patch
(4.96 KB, patch)
2011-01-31 11:00 PST
,
Carol Szabo
no flags
Details
Formatted Diff
Diff
Proposed Patch
(5.00 KB, patch)
2011-02-01 09:17 PST
,
Carol Szabo
darin
: review+
darin
: commit-queue-
Details
Formatted Diff
Diff
Proposed Patch. Addressed darin's concerns
(4.96 KB, patch)
2011-02-01 10:52 PST
,
Carol Szabo
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Carol Szabo
Comment 1
2011-01-24 14:07:52 PST
Have patch ready, waiting for my patch to 53024 to land as it depends on that.
Carol Szabo
Comment 2
2011-01-31 11:00:20 PST
Created
attachment 80660
[details]
Proposed Patch This is my proposed patch. Waiting for my patch to 53024 to be landed before I submit this for review and commit (or else it won't build).
Carol Szabo
Comment 3
2011-02-01 09:17:10 PST
Created
attachment 80767
[details]
Proposed Patch
Darin Adler
Comment 4
2011-02-01 09:39:21 PST
Comment on
attachment 80767
[details]
Proposed Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=80767&action=review
Feel free to have another committer change commit-queue from - to + if you decide you don’t want to make my suggested minor tweaks.
> Source/WebCore/rendering/RenderTreeAsText.cpp:773 > + // The counter renderers should be children of > + // :before or :after pseudo-elements.
No reason to break this comment into two lines.
> Source/WebCore/rendering/RenderTreeAsText.cpp:780 > + RenderObject* pseudoElement = renderer->beforePseudoElementRenderer(); > + if (pseudoElement) > + writeCounterValuesFromChildren(stream, pseudoElement, isFirstCounter); > + pseudoElement = renderer->afterPseudoElementRenderer(); > + if (pseudoElement) > + writeCounterValuesFromChildren(stream, pseudoElement, isFirstCounter);
I suggest putting the local variable definitions into the if statements.
Carol Szabo
Comment 5
2011-02-01 10:52:18 PST
Created
attachment 80786
[details]
Proposed Patch. Addressed darin's concerns
Dave Hyatt
Comment 6
2011-02-01 11:51:05 PST
Comment on
attachment 80786
[details]
Proposed Patch. Addressed darin's concerns r=me
WebKit Commit Bot
Comment 7
2011-02-01 12:28:20 PST
Comment on
attachment 80786
[details]
Proposed Patch. Addressed darin's concerns Clearing flags on attachment: 80786 Committed
r77273
: <
http://trac.webkit.org/changeset/77273
>
WebKit Commit Bot
Comment 8
2011-02-01 12:28:25 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug