2011-02-01  Carol Szabo  <carol.szabo@nokia.com>

Reviewed by David Hyatt.

        layoutTestController.counterValueForElementById does not return the correct value
        https://bugs.webkit.org/show_bug.cgi?id=53037

        * fast/css/counters/deep-before-expected.txt: Added.
        * fast/css/counters/deep-before.html: Added.
        This tests whether DumpRenderTree properly retrieves counters and
        whether counters are properly set when the before pseudo element's
        renderer is not a direct child of the generating element's renderer.
2011-02-01  Carol Szabo  <carol.szabo@nokia.com>

        Reviewed by David Hyatt.

        layoutTestController.counterValueForElementById does not return the correct value
        https://bugs.webkit.org/show_bug.cgi?id=53037

        Test: fast/css/counters/deep-before.html

        * rendering/RenderTreeAsText.cpp:
        (WebCore::counterValueForElement):
        Modified to use the newly available RenderObject::beforePseudoElement()
        and RenderObject::afterPseudoElement() instead of the old imperfect
        algorithm to find the before and after pseudo elements.

Canonical link: https://commits.webkit.org/67384@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@77273 268f45cc-cd09-0410-ab3c-d52691b4dbfc